@@ -23,6 +23,13 @@ public:
   bool m_leftButtonPressed;       // 鼠标左键按下标记
   bool m_maxButtonPressed;        // 最大化按钮按下
   bool m_setButtonPressed;
+  QLabel *icon;
+  QPushButton *m_pMinimizeButton; // 最小化按钮
+  QPushButton *m_pMaximizeButton; //
+  QPushButton *m_pCloseButton;    // 关闭按钮
+  QPoint m_start;                 // 起始点
+  QPoint m_end;                   // 结束点
+
   // 设置模式或功能名称
 //  void setFuncLabel(QString label);
 
@@ -51,12 +58,6 @@ private:
 
 private:
 
-    QLabel *icon;
-    QPushButton *m_pMinimizeButton; // 最小化按钮
-    QPushButton *m_pMaximizeButton;
-    QPushButton *m_pCloseButton;    // 关闭按钮
-    QPoint m_start;                 // 起始点
-    QPoint m_end;                   // 结束点
 
 };
 
