@@ -1,3 +1,10 @@
+kylin-camera (1.1.1kord5rc1) v101; urgency=medium
+
+  * 解决mips编译不通过的问题
+  * 解决拍照闪退问题
+
+ -- 宋熙康 <songxikang@kylinos.cn>  Mon, 30 Nov 2020 20:26:06 +0800
+
 kylin-camera (1.1.1kord) v101; urgency=medium
 
   * 解决mips编译不通过的问题
